Init project & First section Hero

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,11 +1,16 @@
+---
+import "../styles/global.css";
+
+const { title = 'Material de construcción Cuallado' } = Astro.props;
+---
+
 <!doctype html>
-<html lang="en">
+<html lang="ca">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
 		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-		<meta name="generator" content={Astro.generator} />
-		<title>Astro Basics</title>
+		<title>{title}</title>
 	</head>
 	<body>
 		<slot />
