--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,19 @@
 ---
-import Welcome from '../components/Welcome.astro';
-import Layout from '../layouts/Layout.astro';
+import Layout from '@/layouts/Layout.astro';
 
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Hero from '@/components/Hero.astro';
+import Who from '@/components/Who.astro';
+import History from '@/components/History.astro';
+import Commitment from '@/components/Commitment.astro';
+import Services from '@/components/Services.astro';
+import Contact from '@/components/Contact.astro';
 ---
 
 <Layout>
-	<Welcome />
+	<Hero />
+	<Who />
+	<History />
+	<Commitment />
+	<Services />
+	<Contact />
 </Layout>
