Added Contact, Services sections. Added scroll-snap. Added arrow to top

--- a/src/components/Commitment.astro
+++ b/src/components/Commitment.astro
@@ -1,4 +1,4 @@
-<section id="commitment" class="flex flex-col min-h-screen">
+<section id="commitment" class="flex flex-col min-h-screen snap-center snap-always">
 	<div class="p-16">
 		<h3 class="text-6xl font-serif">El nostre compromís</h3>
 		<p class="text-3xl my-12 font-sans">
