--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import MenuItem from "./MenuItem.astro";
 ---
 
-<section class="min-h-screen bg-[url('images/ladrillo.webp')] bg-cover">
+<section id="hero" class="min-h-screen snap-center snap-always bg-[url('images/ladrillo.webp')] bg-cover">
 	<div class="grid grid-cols-7 grid-rows-7 gap-4">
         <div class="col-span-5 col-start-3 row-start-2">
 			<h1 class="font-sans text-5xl font-semibold text-white">
