--- a/src/components/History.astro
+++ b/src/components/History.astro
@@ -1,4 +1,4 @@
-<section id="history" class="min-h-screen bg-amber-400">
+<section id="history" class="min-h-screen snap-center snap-always">
 	<div class="w-5xl p-16">
 		<h3 class="text-6xl font-serif mb-8">La nostra història</h3>
 		<p class="text-xl font-sans">
