--- a/src/components/Who.astro
+++ b/src/components/Who.astro
@@ -1,4 +1,4 @@
-<section id="who" class="min-h-screen columns-2">
+<section id="who" class="min-h-screen snap-center snap-always columns-2">
 	<div class="min-h-screen p-12 content-center">
 		<h3 class="text-6xl font-serif">Qui som?</h3>
 		<p class="text-3xl my-12 font-sans">
