Fix up arrow animation. Fix Services columns.

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -2,16 +2,16 @@
 	<img class="object-contain object-top" src="images/colores.webp" alt="Colores">
 	<div class="p-16">
 		<h3 class="text-6xl font-serif">El nostres serveis</h3>
-		<p class="text-3xl my-12 font-sans">
+		<p class="text-3xl my-16 font-sans">
 			En Cuallado, oferim solucions completes per a la construcció, combinant qualitat, experiència i un tracte pròxim.
 			Comptem amb dues àrees principals de treball:
 		</p>
-		<div class="columns-2">
+		<div class="columns-2 gap-32">
 			<div>
-				<h4 class="text-4xl mb-12 font-serif font-medium">
+				<h4 class="text-4xl font-serif font-medium">
 					Venda de material de construcció
 				</h4>
-				<p class="text-3xl my-12 font-sans">
+				<p class="text-2xl my-8 font-sans">
 					Disposem d'un ampli catàleg de materials per a
 					professionals i particulars. Assessorem
 					personalment cada client per a garantir que trobe
@@ -19,10 +19,10 @@
 				</p>
 			</div>
 			<div>
-				<h4 class="text-4xl mb-12 font-serif font-medium">
+				<h4 class="text-4xl font-serif font-medium">
 					Transport, logística i serveis
 				</h4>
-				<p class="text-3xl my-12 font-sans">
+				<p class="text-2xl my-8 font-sans">
 					Som un magatzem logístic i de distribució de
 					materials per a facilitar el treball dels nostres clients.
 					A més, comptem amb servei de transport propi per
