--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,12 +1,12 @@
 ---
-import Layout from '@/layouts/Layout.astro';
+import Layout from '../layouts/Layout.astro';
 
-import Hero from '@/components/Hero.astro';
-import Who from '@/components/Who.astro';
-import History from '@/components/History.astro';
-import Commitment from '@/components/Commitment.astro';
-import Services from '@/components/Services.astro';
-import Contact from '@/components/Contact.astro';
+import Hero from '../components/Hero.astro';
+import Who from '../components/Who.astro';
+import History from '../components/History.astro';
+import Commitment from '../components/Commitment.astro';
+import Services from '../components/Services.astro';
+import Contact from '../components/Contact.astro';
 ---
 
 <Layout>
