Revert routes for files. Change astro config for build folder

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,5 @@
 ---
-import "../styles/global.css";
+import "@/styles/global.css";
 
 const { title = 'Material de construcción Cuallado' } = Astro.props;
 ---
