--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -1,4 +1,4 @@
-<section id="contact" class="min-h-screen snap-center snap-always bg-[url('images/azulejo.webp')] bg-cover">
+<section id="contact" class="min-h-screen snap-center snap-always bg-[url('/images/azulejo.webp')] bg-cover">
 	<div class="p-32">
 		<h3 class="text-7xl font-serif">Contacta amb nosaltres</h3>
 		<p class="text-3xl my-12 font-sans">
