--- a/src/components/History.astro
+++ b/src/components/History.astro
@@ -7,4 +7,12 @@
 			a les necessitats del mercat amb noves instal·lacions, tecnologia i formes de treball.
 		</p>
 	</div>
+	<div class="grid grid-cols-3 gap-4 p-16 ">
+		<img class="rounded-md" src="images/1960.png" alt="1960">
+		<img class="rounded-md" src="images/1965.png" alt="1965">
+		<img class="rounded-md" src="images/1975.png" alt="1975">
+		<img class="rounded-md" src="images/1992.png" alt="1992">
+		<img class="rounded-md" src="images/2001.png" alt="2001">
+		<img class="rounded-md" src="images/cartel2025.webp" alt="2025">
+	</div>
 </section>
