Responsive design. Mobile menu, Mobile landing

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,19 +2,19 @@
 import MenuItem from "./MenuItem.astro";
 ---
 
-<section id="hero" class="min-h-screen snap-center snap-always bg-[url('/images/ladrillo.webp')] bg-cover">
-	<div class="grid grid-cols-7 grid-rows-7 gap-4">
-        <div class="col-span-5 col-start-3 row-start-2">
-			<h1 class="font-sans text-5xl font-semibold text-white">
+<section id="hero" class="min-h-screen snap-center snap-always bg-[url('/images/ladrillo.webp')] bg-cover content-center">
+	<div class="xl:grid xl:grid-cols-7 xl:grid-rows-7 grid-cols-5 grid-rows-4 gap-4">
+        <div class="col-span-5 row-start-2 col-start-2">
+			<h1 class="font-sans text-5xl font-semibold text-white hidden xl:block">
 				MATERIALS DE CONSTRUCCIÓ CUALLADO S.L.
 			</h1>
 		</div>
-		<div class="col-span-4 row-span-3 col-start-3 row-start-3">
-			<h2 class="font-serif text-white text-9xl ml-8">
+		<div class="col-span-4 row-span-3 row-start-3 col-start-2">
+			<h2 class="font-serif text-white xl:text-9xl text-7xl xl:ml-8 text-center xl:text-left">
 				Des dels anys 60 construïnt amb tu.
 			</h2>
 		</div>
-		<div class="col-span-2 row-span-2 col-start-6 row-start-6 text-end self-end font-sans text-white font-medium text-2xl">
+		<nav class="col-span-2 row-span-2 col-start-6 row-start-6 text-end self-end font-sans text-white font-medium text-2xl hidden xl:block">
 			<ul class="mr-8">
 				<MenuItem text="QUI SOM?" anchor="#who" />
 				<MenuItem text="LA NOSTRA HISTÒRIA" anchor="#history" />
@@ -22,6 +22,6 @@ import MenuItem from "./MenuItem.astro";
 				<MenuItem text="ELS NOSTRES SERVEIS" anchor="#services" />
 				<MenuItem text="CONTACTA AMB NOSALTRES" anchor="#contact" />
 			</ul>
-		</div>
+		</nav>
 	</div>
 </section>
