--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,4 +1,4 @@
-<section id="services" class="min-h-screen snap-center snap-always">
+<section id="services" class="md:min-h-screen snap-center snap-always">
 	<img class="object-contain object-top" src="images/colores.webp" alt="Colores">
 	<div class="p-16">
 		<h3 class="text-6xl font-serif">El nostres serveis</h3>
@@ -6,7 +6,7 @@
 			En Cuallado, oferim solucions completes per a la construcció, combinant qualitat, experiència i un tracte pròxim.
 			Comptem amb dues àrees principals de treball:
 		</p>
-		<div class="columns-2 gap-32">
+		<div class="md:columns-2 gap-32">
 			<div>
 				<h4 class="text-4xl font-serif font-medium">
 					Venda de material de construcció
