--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,8 @@
 ---
 import Layout from '@/layouts/Layout.astro';
 
+import HeroMobile from '@/components/HeroMobile.astro';
+import MenuMobile from '@/components/MenuMobile.astro';
 import Hero from '@/components/Hero.astro';
 import Who from '@/components/Who.astro';
 import History from '@/components/History.astro';
@@ -10,6 +12,8 @@ import Contact from '@/components/Contact.astro';
 ---
 
 <Layout>
+	<HeroMobile />
+	<MenuMobile />
 	<Hero />
 	<Who />
 	<History />
