--- a/src/components/ContactSection.astro
+++ b/src/components/ContactSection.astro
@@ -1,8 +1,8 @@
 ---
-const { title, content } = Astro.props
+const { title } = Astro.props
 ---
 
-<div class="flex flex-col justify-between bg-amber-500 p-8 min-h-70">
+<div class="flex flex-col justify-between bg-amber-600 p-8 min-h-70">
 	<h4 class="text-4xl font-serif font-medium">
 		{title}
 	</h4>
