--- a/src/components/History.astro
+++ b/src/components/History.astro
@@ -1,13 +1,13 @@
-<section id="history" class="min-h-screen snap-center snap-always">
-	<div class="w-5xl p-16">
-		<h3 class="text-6xl font-serif mb-8">La nostra història</h3>
-		<p class="text-xl font-sans">
+<section id="history" class="md:min-h-screen snap-center snap-always">
+	<div class="p-16">
+		<h3 class="text-6xl md:text-8xl font-serif mb-8">La nostra història</h3>
+		<p class="text-3xl md:text-5xl font-sans">
 			La nostra trajectòria va començar en els anys 60, gràcies a l'esforç i dedicació de
 			Francisco Cuallado Baixauli. Amb el temps, hem crescut i evolucionat, adaptant-nos
 			a les necessitats del mercat amb noves instal·lacions, tecnologia i formes de treball.
 		</p>
 	</div>
-	<div class="grid grid-cols-3 gap-4 p-16 ">
+	<div class="grid md:grid-cols-3 gap-4 p-16 ">
 		<img class="rounded-md" src="images/1960.png" alt="1960">
 		<img class="rounded-md" src="images/1965.png" alt="1965">
 		<img class="rounded-md" src="images/1975.png" alt="1975">
