--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ const { title = 'Material de construcción Cuallado' } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="ca" class="scroll-smooth snap-y snap-mandatory">
+<html lang="ca" class="md:scroll-smooth md:snap-y md:snap-mandatory">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
@@ -15,7 +15,7 @@ const { title = 'Material de construcción Cuallado' } = Astro.props;
 		<link rel="icon" href="/images/favicon.webp">
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="relative">
 		<slot />
 		<a href="#hero"
 			class="fixed bottom-6 right-6 w-15"
