Change hero img. Remove scroll-snap. Responsive fixes.

--- a/src/components/Commitment.astro
+++ b/src/components/Commitment.astro
@@ -1,5 +1,5 @@
-<section id="commitment" class="flex flex-col md:min-h-screen snap-center snap-always">
-	<div class="p-16">
+<section id="commitment" class="flex flex-col md:min-h-screen">
+	<div class="xl:p-16 p-8">
 		<h3 class="text-6xl font-serif">El nostre compromís</h3>
 		<p class="text-3xl my-12 font-sans">
 			Escollim la proximitat i en el tracte directe. Ens agrada conéixer als nostres clients, assessorar-los i
