--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -2,14 +2,14 @@
 import ContactSection from "./ContactSection.astro";
 ---
 
-<section id="contact" class="md:min-h-screen snap-center snap-always bg-[url('/images/azulejo.webp')] bg-cover">
+<section id="contact" class="md:min-h-screen bg-[url('/images/azulejo.webp')] bg-cover">
 	<div class="p-8 md:p-32">
 		<h3 class="text-7xl font-serif">Contacta amb nosaltres</h3>
 		<p class="text-3xl my-12 font-sans">
 			Ens diferenciem per la nostra atenció personalitzada i la confiança que hem construït al
 			llarg dels anys. <b>Treballem amb tu perquè cada projecte siga un èxit.</b>
 		</p>
-		<div class="grid md:grid-cols-3 gap-16 py-12 text-white">
+		<div class="grid xl:grid-cols-3 gap-16 py-12 text-white">
 			<ContactSection title="Ací ens trobem">
 				<p class="text-2xl font-sans font-medium">
 					Direcció
