--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,7 +2,7 @@
 import MenuItem from "./MenuItem.astro";
 ---
 
-<section id="hero" class="min-h-screen snap-center snap-always bg-[url('/images/ladrillo.webp')] bg-cover content-center">
+<section id="hero" class="min-h-screen bg-[url('/images/ladrillo.webp')] bg-cover content-center">
 	<div class="xl:grid xl:grid-cols-7 xl:grid-rows-7 grid-cols-5 grid-rows-4 gap-4">
         <div class="col-span-5 row-start-2 col-start-2">
 			<h1 class="font-sans text-5xl font-semibold text-white hidden xl:block">
@@ -10,7 +10,7 @@ import MenuItem from "./MenuItem.astro";
 			</h1>
 		</div>
 		<div class="col-span-4 row-span-3 row-start-3 col-start-2">
-			<h2 class="font-serif text-white xl:text-9xl text-7xl xl:ml-8 text-center xl:text-left">
+			<h2 class="font-serif text-white xl:text-9xl text-8xl xl:ml-8 text-center xl:text-left">
 				Des dels anys 60 construïnt amb tu.
 			</h2>
 		</div>
