--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -1,6 +1,6 @@
-<section id="services" class="md:min-h-screen snap-center snap-always">
+<section id="services" class="md:min-h-screen">
 	<img class="object-contain object-top" src="images/colores.webp" alt="Colores">
-	<div class="p-16">
+	<div class="xl:p-16 p-8">
 		<h3 class="text-6xl font-serif">El nostres serveis</h3>
 		<p class="text-3xl my-16 font-sans">
 			En Cuallado, oferim solucions completes per a la construcció, combinant qualitat, experiència i un tracte pròxim.
