--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,7 +5,7 @@ const { title = 'Material de construcción Cuallado' } = Astro.props;
 ---
 
 <!doctype html>
-<html lang="ca" class="md:scroll-smooth md:snap-y md:snap-mandatory">
+<html lang="ca">
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width" />
