--- a/src/components/HeroMobile.astro
+++ b/src/components/HeroMobile.astro
@@ -1,7 +1,7 @@
 <section>
 	<div class="min-h-screen block xl:hidden content-center">
 		<h1 class="font-sans text-5xl font-semibold text-orange-800 text-center">
-			MATERIALS DE CONSTRUCCIÓ CUALLADO S.L.
+			MATERIALS DE<br>CONSTRUCCIÓ<br>CUALLADO S.L.
 		</h1>
 	</div>
 </section>
