--- a/src/components/Who.astro
+++ b/src/components/Who.astro
@@ -1,4 +1,4 @@
-<section id="who" class="md:max-h-screen md:overflow-y-hidden snap-center snap-always md:columns-2">
+<section id="who" class="md:max-h-screen md:overflow-y-hidden lg:columns-2">
 	<div class="md:min-h-screen p-12 content-center">
 		<h3 class="text-6xl font-serif">Qui som?</h3>
 		<p class="text-3xl my-12 font-sans">
